--- a/app/views/main/_menu.html.erb
+++ b/app/views/main/_menu.html.erb
@@ -1,13 +1,13 @@
 <div class="col-md-4">
   <div class="panel panel-primary">
-    <div class="panel-heading">
-        Site links
+        <div class="panel-heading">
+            Site links
+        </div>
+        <div class="panel-body">
+            <a class="btn btn-primary btn-md btn-block" href="/collection">Collection</a>
+            <a class="btn btn-primary btn-md btn-block" href="/blogs">Blogs</a>
+            <a class="btn btn-primary btn-md btn-block" href="/gallery">Gallery</a>
+            <a class="btn btn-primary btn-md btn-block" href="/contact">Contact</a>
+        </div>
     </div>
-    <div class="panel-body">
-        <a class="btn btn-default btn-md btn-block" href="/collection">Collection</a>
-        <a class="btn btn-default btn-md btn-block" href="/blogs">Blogs</a>
-        <button type="button" class="btn btn-default btn-md btn-block">Gallery</button>
-        <a class="btn btn-default btn-md btn-block" href="/contact">Contact</a>
-    </div>
-</div>
 </div>
