--- a/app/views/main/contact.html.erb
+++ b/app/views/main/contact.html.erb
@@ -1,45 +1,1 @@
-<div class="row">
-	<div class="col-md-12">
-		<div class="panel panel-primary">
-    		<div class="panel-heading">
-        		Contact
-  		    </div>
-    		<div class="panel-body">
-    			<p>Many thanks for taking the time to view the website. Please feel free to use this form to get in contact with me if you are looking for something or have something to offer.</p>
-
-			<form name="contact" class="form-horizontal" role="form" method="post" action="/contact_process">
-          <input name="authenticity_token" value="<%= form_authenticity_token %>" type="hidden">
-  				<div class="form-group">
-    				<label for="name" class="col-sm-2 control-label">Name</label>
-    				<div class="col-sm-10">
-      					<input type="name" class="form-control" id="name" name="name" placeholder="Name">
-   					</div>
-  				</div>
-  				<div class="form-group">
-    				<label for="email" class="col-sm-2 control-label">Email</label>
-    				<div class="col-sm-10">
-      					<input type="email" class="form-control" id="email" name="email" placeholder="Email">
-   					</div>
-  				</div>
-          <div class="form-group">
-            <label for="subject" class="col-sm-2 control-label">Subject</label>
-            <div class="col-sm-10">
-                <input type="subject" class="form-control" id="subject" name="subject" placeholder="<%= @comment.subject %>" value="<%= @comment.subject %>">
-            </div>
-          </div>
-  				<div class="form-group">
-    				<label for="message" class="col-sm-2 control-label">Message</label>
-    				<div class="col-sm-10">
-      					<textarea type="message" class="form-control" id="message" name="message" placeholder="Message"></textarea>
-   					</div>
-  				</div>
-  				<div class="form-group">
-    				<div class="col-sm-offset-2 col-sm-10">
-      					<button type="submit" class="btn btn-primary">Send message</button>
-    				</div>
-  				</div>
-			</form>
-   			</div>
-		</div>
-	</div>
-</div>
+<%= render :partial => 'main/contact', :locals => {blog: @blog, item: @item, comment: @comment } %>
