--- a/app/views/item/_list.html.erb
+++ b/app/views/item/_list.html.erb
@@ -1,3 +1,29 @@
-<% items.each do |item| %>
-	<%= item.name %><br/>
+<% if items.count > 10 %>
+<div class="text-center">
+	<%= will_paginate items, renderer: BootstrapPagination::Rails %>
+</div>
 <% end %>
+
+<% items.each do |item| %>
+	<div class="pull-left">
+		<% src = "http://placehold.it/100x100&text=No Image" %>
+        <% src = item.images.first.rawimage.url(:list) if !item.images.blank? %>
+		<img class="img-responsive img-thumbnail img-hover" src="<%= src %>" alt="">
+		&nbsp;
+	</div>
+	<div>
+		<a href="/item/<%= item.slug %>"><%= item.name %></a>
+		<br/>
+		<%= item.year %> |
+		<%= item.get_virtualcollections_string %> |
+		<%= item.get_categories_string %> |
+		<%= item.get_rolodexes_string %> |
+		<%= item.get_all_fieldoptions_string %>
+	</div>
+	<div class="clearfix"></div>
+	<%=raw "<hr/>" if item != items.last %>
+<% end %>
+
+<div class="text-center">
+	<%= will_paginate items, renderer: BootstrapPagination::Rails %>
+</div>
