--- a/app/views/main/_center.html.erb
+++ b/app/views/main/_center.html.erb
@@ -1,5 +1,10 @@
 <div class="row">
 	<div class="col-lg-12">
+		<img class="img-responsive img-thumbnail img-hover" src="/images/oldcomputers.jpg" %>
+	</div>
+</div>
+<div class="row">
+	<div class="col-lg-12">
 		<h3 class="page-header">
 			Welcome to the oldcomputers website
         </h3>
