--- a/app/views/main/_nav.html.erb
+++ b/app/views/main/_nav.html.erb
@@ -1,9 +1,9 @@
 <nav class="navbar navbar-default" role="navigation">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="/">oldcomputers</a>
+            <a class="navbar-brand" href="/">OLDCOMPUTERS.CO.ZA</a>
         </div>
-		<form class="navbar-form navbar-right" role="search" method="get" action="search">
+		<form class="navbar-form navbar-right" role="search" method="get" action="/search">
 			<div class="form-group">
 				<input name="search" type="text" class="form-control" placeholder="Search">
 			</div>
