--- a/app/views/item/_featured.html.erb
+++ b/app/views/item/_featured.html.erb
@@ -14,9 +14,9 @@
     </div>
     <div class="col-md-4">
         <div class="center-block">
-            <% src = "http://placehold.it/700x450&text=No Image" %>
-            <% src = item.images.first.rawimage.url(:latest) if !item.images.blank? %>
-            <img class="img-responsive img-thumbnail" src="<%= src %>" alt="">
+            <% if !item.images.blank? %>
+                <img class="img-responsive img-thumbnail" src="<%= item.images.first.rawimage.url(:latest) %>" alt="">
+            <% end %>
         </div>
     </div>
     <div class="col-md-4">
