--- a/app/views/item/_latest.html.erb
+++ b/app/views/item/_latest.html.erb
@@ -4,9 +4,9 @@
     </div>
     <% Item.latest.each do |item| %>
     <div class="col-md-4 col-sm-6 text-center">
-        <% src = "http://placehold.it/700x450&text=No Image" %>
-        <% src = item.images.first.rawimage.url(:latest) if !item.images.blank? %>
-        <img class="img-responsive img-thumbnail img-hover" src="<%= src %>" alt="">
+        <% if !item.images.blank? %>
+            <img class="img-responsive img-thumbnail img-hover" src="<%= item.images.first.rawimage.url(:latest)  %>" alt="">
+        <% end %>
         <br/>
         <%= item.name %>
         <br/>
