Fixed issues #25 and #26

--- a/app/views/collection/_menu.html.erb
+++ b/app/views/collection/_menu.html.erb
@@ -3,7 +3,7 @@
 		Collections
 	</div>
     <div class="panel-body">
-    	<% Virtualcollection.all.each do |virtualcollection| %>
+    	<% Virtualcollection.all.order(:name).each do |virtualcollection| %>
     		<a href="/collection/<%= virtualcollection.slug %>"><%= virtualcollection.name %></a><span class="badge pull-right"><%= virtualcollection.items.count %></span><br/>
         <% end %>
 
@@ -16,7 +16,7 @@
 		<%= itemfield.name %>
 	</div>
     <div class="panel-body">
-    	<% itemfield.fieldoptions.all.each do |fieldoption| %>
+    	<% itemfield.fieldoptions.all.order(:name).each do |fieldoption| %>
         	<a href="/collection/<%= fieldoption.itemfield_slug %>/<%= fieldoption.slug %>"><%= fieldoption.name %></a> <span class="badge pull-right"><%= fieldoption.items.count %></span><br/>
         <% end %>
 	</div>
