--- a/app/views/collection/_about.html.erb
+++ b/app/views/collection/_about.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-   <div class="col-lg-12">
+   <div class="col-md-12">
         <h3 class="page-header">About the oldcomputers collection</h3>
     </div>
     <div class="col-md-12">
