--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,7 +1,10 @@
 <div id="maincontent">
     <%= render :partial => 'main/center' %>
+
     <%= render :partial => 'item/featured', :locals => {item: @featured_item} %>
-    <%= render :partial => 'item/latest' %>
+    <div class="row">    
+        <%= render :partial => 'item/latest' %>
+    </div>
     <hr/>
 
     <div class="row">
