Added mailer to fix issue #1

--- a/app/views/gallery/_list.html.erb
+++ b/app/views/gallery/_list.html.erb
@@ -4,9 +4,8 @@
 <div class="row">
 <% images.each do |image| %>
 		<div class="col-xs-3 text-center">
-			<%= image.items.first.name if !image.items.first.blank? %></h4>
+			<h4><%= image.items.first.name if !image.items.first.blank? %></h4>
 			<a href="<%= image.click_through_link %>"><img class="img-responsive img-thumbnail" src="<%= image.rawimage.url(:gallery) %>" alt=""/></a>
-
 		</div>
 	<% if images.index(image)%4 == 3 %>
 		</div>
