Patch for issue #11

--- a/app/views/main/_nav.html.erb
+++ b/app/views/main/_nav.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default" role="navigation">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="/">OLDCOMPUTERS.CO.ZA</a>
+            <a class="navbar-brand" href="/">The Oldcomputers and Game website</a>
         </div>
 		<form class="navbar-form navbar-right" role="search" method="get" action="/search">
 			<div class="form-group">
