--- a/app/views/item/_list.html.erb
+++ b/app/views/item/_list.html.erb
@@ -12,7 +12,7 @@
 		&nbsp;
 	</div>
 	<div>
-		<a href="/item/<%= item.slug %>"><%= item.name %></a>
+		<a href="/items/<%= item.slug %>"><%= item.name %></a>
 		<br/>
 		<%= item.year %> |
 		<%= item.get_virtualcollections_string %> |
