--- a/app/views/main/_menu.html.erb
+++ b/app/views/main/_menu.html.erb
@@ -8,6 +8,7 @@
             <a class="btn btn-primary btn-md btn-block" href="/blogs">Blogs</a>
             <a class="btn btn-primary btn-md btn-block" href="/gallery">Gallery</a>
             <a class="btn btn-primary btn-md btn-block" href="/contact">Contact</a>
+            <a class="btn btn-primary btn-md btn-block" href="/links">Links</a>
         </div>
     </div>
 </div>
