--- a/app/views/layouts/blog.html
+++ b/app/views/layouts/blog.html
@@ -16,6 +16,7 @@
 	<%= javascript_include_tag 'application', 'data-turbolinks-track' => false %>
 	<%= csrf_meta_tags %>
 	<%= favicon_link_tag 'favicon.ico' %>
+	<meta name="Description" content="<%= @blog.title %>">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
