--- a/app/views/main/_footer.html.erb
+++ b/app/views/main/_footer.html.erb
@@ -1,7 +1,7 @@
 <div class="container text-center" style="padding-left:8px; padding-right:8px">
 <footer>
     <div class="row">
-        <div class="col-lg-12">
+        <div class="col-xs-12">
         <hr/>
             <p>Copyright &copy; oldcomputers.co.za <%= Date.current.year %></p>
         </div>
