--- a/app/views/main/_nav.html.erb
+++ b/app/views/main/_nav.html.erb
@@ -1,13 +1,18 @@
-<nav class="navbar navbar-default" role="navigation">
+<nav class="navbar navbar-custom" role="navigation">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="/">The Oldcomputers and Game website</a>
+            <a class="navbar-brand" href="/">Old computers and games in South Africa</a>
         </div>
-		<form class="navbar-form navbar-right" role="search" method="get" action="/search">
-			<div class="form-group">
-				<input name="search" type="text" class="form-control" placeholder="Search">
-			</div>
-			<button type="submit" class="btn btn-primary btn"><span class="glyphicon glyphicon-search"></span></button>
-		</form>
+            <ul class="nav navbar-nav">
+                <li><a href="/">Home</a></li>
+            </ul>
+            <div class="pull-right">
+                <form class="navbar-form" role="search" method="get" action="/search">
+                    <div class="form-group">
+                        <input name="search" type="text" class="form-control" placeholder="Search">
+                    </div>
+                    <button type="submit" class="btn btn-primary btn"><span class="glyphicon glyphicon-search"></span></button>
+                </form>
+            </div>
     </div>
 </nav>
