Updates to links page

--- a/app/views/main/links.html.erb
+++ b/app/views/main/links.html.erb
@@ -4,7 +4,7 @@
     </div>
     <div class="col-md-12">
     	<p>This is the website of the Vintage Computing Group of South Africa with links to their Facebook page and contact details.</p>
-    	<p><a href="http://vcgsa.co.za">http://vcgsa.co.za</a>
+    	<p><a target="blank" href="http://vcgsa.co.za">http://vcgsa.co.za</a>
 
     </div>
     <div class="col-md-12">
@@ -12,6 +12,6 @@
     </div>
     <div class="col-md-12">
     	<p>This website hosts the onlinecollectors database framework and allows anyone to setup an online collection at no cost.</p>
-    	<p><a href="http://onlinecollector.co.za">http://onlinecollector.co.za</a>
+    	<p><a target="blank" href="http://onlinecollector.co.za">http://onlinecollector.co.za</a>
     </div>
 </div>
