--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
 	<%= javascript_include_tag 'application' %>
 	<%= csrf_meta_tags %>
 	<%= favicon_link_tag 'favicon.ico' %>
+	<meta name="description" content="A website dedicated to the collecting, enjoyment and preservation of vintage / old computers and games in South Africa">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
