Logo moved to partial

--- a/app/views/main/_center.html.erb
+++ b/app/views/main/_center.html.erb
@@ -1,9 +1,4 @@
-<div class="row">
-	<div class="col-lg-12">
-		<img class="img-responsive img-thumbnail img-hover" src="/images/oldcomputers.jpg" %>
-	</div>
-</div>
-
+<%= render 'main/logo' %>
 <div class="row">
 	<div class="col-lg-12">
 		<h3 class="page-header">
