--- a/app/views/main/contact.html.erb
+++ b/app/views/main/contact.html.erb
@@ -1,1 +1,2 @@
+<%= render :partial => 'main/logo' %>
 <%= render :partial => 'main/contact', :locals => {blog: @blog, item: @item, comment: @comment } %>
