--- a/app/views/main/_facebook.html
+++ b/app/views/main/_facebook.html
@@ -1,4 +1,4 @@
-<div class="fb-like pull-right" data-href="http://www.oldcomputers.co.za" data-layout="button" data-action="like" data-show-faces="true" data-share="true"></div>
+<div class="fb-like pull-right" data-href="<%= request.original_url %>" data-layout="button" data-action="like" data-show-faces="true" data-share="true"></div>
 
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
@@ -7,3 +7,5 @@
   js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.0";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
+
+
