--- a/app/views/main/_nav.html.erb
+++ b/app/views/main/_nav.html.erb
@@ -1,10 +1,16 @@
 <nav class="navbar navbar-custom" role="navigation">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="/">Old computers and games in South Africa</a>
+            <a class="navbar-brand" href="/">oldcomputers.co.za</a>
         </div>
             <ul class="nav navbar-nav">
                 <li><a href="/">Home</a></li>
+            </ul>
+            <ul class="nav navbar-nav">
+                <li><a href="/blogs">Blogs</a></li>
+            </ul>
+            <ul class="nav navbar-nav">
+                <li><a href="/collection">Collection</a></li>
             </ul>
             <div class="pull-right">
                 <form class="navbar-form" role="search" method="get" action="/search">
