--- a/app/assets/html/404.html.erb
+++ b/app/assets/html/404.html.erb
@@ -11,6 +11,11 @@
 <body>
     <div class="container">
         <div class="row">
+            <div class="col-lg-12">
+                <img class="img-responsive img-thumbnail img-hover" src="/images/oldcomputers.jpg" %>
+            </div>
+        </div>
+        <div class="row">
             <div class="col-md-3">
             </div>
             <div class="col-md-6">
