--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -7,6 +7,8 @@
     </div>
     <hr/>
 
+    <%= render 'main/about' %>
+
     <div class="row">
         <div class="panel-primary">
         <div class="col-md-10">
