Minor site wording updates

--- a/app/views/main/_nav.html.erb
+++ b/app/views/main/_nav.html.erb
@@ -7,10 +7,10 @@
                 <li><a href="/">Home</a></li>
             </ul>
             <ul class="nav navbar-nav">
-                <li><a href="/blogs">Blogs</a></li>
+                <li><a href="/collection">The Collection</a></li>
             </ul>
             <ul class="nav navbar-nav">
-                <li><a href="/collection">Collection</a></li>
+                <li><a href="/blogs">Blogs</a></li>
             </ul>
             <div class="pull-right">
                 <form class="navbar-form" role="search" method="get" action="/search">
