--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
 	<%= favicon_link_tag 'favicon.ico' %>
 	<meta name="description" content="A website dedicated to the collecting, enjoyment and preservation of vintage / old computers and games in South Africa">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="msvalidate.01" content="73AA3CF32128BC8FDE62A74C5A9D4603" />
 </head>
 <body>
 	<%= render :partial => 'main/nav' %>
