--- a/app/views/collection/_menu.html.erb
+++ b/app/views/collection/_menu.html.erb
@@ -1,24 +1,2 @@
-<div class="panel panel-primary">
-	<div class="panel-heading">
-		Collections
-	</div>
-    <div class="panel-body">
-    	<% Virtualcollection.all.order(:name).each do |virtualcollection| %>
-    		<a href="/collection/<%= virtualcollection.slug %>"><%= virtualcollection.name %></a><span class="badge pull-right"><%= virtualcollection.items.count %></span><br/>
-        <% end %>
-
-	</div>
-</div>
-
-<% Itemfield.itemfields_menu_list.each do |itemfield| %>
-<div class="panel panel-primary">
-	<div class="panel-heading">
-		<%= itemfield.name %>
-	</div>
-    <div class="panel-body">
-    	<% itemfield.fieldoptions.all.order(:name).each do |fieldoption| %>
-        	<a href="/collection/<%= fieldoption.itemfield_slug %>/<%= fieldoption.slug %>"><%= fieldoption.name %></a> <span class="badge pull-right"><%= fieldoption.items.count %></span><br/>
-        <% end %>
-	</div>
-</div>
-<% end %>
+<%= render 'virtualcollection/menu' %>
+<%= render 'collection/itemfields' %>
