--- a/app/views/blog/_menu.html.erb
+++ b/app/views/blog/_menu.html.erb
@@ -7,6 +7,7 @@
     	<% Blog.recent_list.each do |blog| %>
             <% working_date = Date::MONTHNAMES[blog.created_at.month] + " " + blog.created_at.year.to_s %>
             <% if blog_date != working_date then %>
+				<%= raw "<br/>" if blog_date != "" %>
                 <strong><%= working_date %> <br/></strong>
                 <% blog_date = working_date %>
             <% end %>
